0.249 2025-09-16
  [Requirement Changes]
    * Require SPVM 0.990089.
  [Document and Internal Changes]
    * Remove "object of" from arguments.
  [Incompatible Changes]
    * Rename Match#captures method to cap method, and Match#captures returns an array that has captured elements.
  [Bug Fix]
    * Fix the bug that Match#captures_length returns wrong value.
    
0.248 2025-06-17
  [Requirement Changes]
    * Require SPVM 0.990068.
  [Bug Fix]
    * Fix a bug that match_string used dangling pointer.
0.247 2025-01-31
  [Incompatible Changes]
    * Change the defintion of Regex#match method.
      
      [Before]
      method match : Regex::Match ($string : string, $offset : int = 0, $length : int = -1);
      
      [After]
      method match : Regex::Match ($string_or_buffer : object of string|StringBuffer, $offset_ref : int* = undef, $length : int = -1)
   
    * Remove Regex#match_forward method in favor of match method.
    * Remove Regex#buffer_match method in favor of match method.
    * Remove Regex#buffer_match_forward method in favor of match method.
    * Change the definitions of Regex#replace method.
     
      [Before]
      method replace  : string ($string : string, $replace : object of string|Regex::Replacer, $offset : int = 0, $length : int = -1, $options : object[] = undef)
      
      [After]
      method replace : Regex::ReplaceInfo ($string_ref_or_buffer : object of string[]|StringBuffer, $replace : object of string|Regex::Replacer, $offset_ref : int* = undef, $length : int = -1, $options : object[] = undef)

    * Change the definitions of Regex#replace_g method.
     
      [Before]
      method replace_g  : string ($string : string, $replace : object of string|Regex::Replacer, $offset : int = 0, $length : int = -1, $options : object[] = undef)
      
      [After]