@@ -24,7 +24,7 @@ The Regex::Match class of L<SPVM> has methods to manipulate a regex matching res
 
 =head2 success
 
-  has success : ro byte;
+C<has success : ro byte;>
 
 Gets the C<success> field.
 
@@ -32,13 +32,13 @@ If a pattern match is successful, this field is set to 1.
 
 =head2 captures
 
-  has captures : string[];
+C<has captures : ro string[];>
 
 Gets the C<captures> field.
 
 The captured strings.
 
-  method captures : string ($index : int);
+C<method captures : string ($index : int);>
 
 The C<captures> method is the method to get an element of the C<captures> field.
 
@@ -46,7 +46,7 @@ The length of the C<captures> field can be got by the L</"captures_length"> meth
 
 =head2  match_start
 
-  has match_start : ro int;
+C<has match_start : ro int>;
 
 Gets the C<match_start> field.
 
@@ -54,7 +54,7 @@ The start offset of the matched string.
 
 =head2 match_length
 
-  has match_length : ro int;
+C<has match_length : ro int>;
 
 Gets the C<match_length> field.
 
@@ -64,37 +64,25 @@ The length of the matched string.
 
 =head2 new
 
-  static method new : Regex::Match ($options : object[] = undef);
+C<static method new : Regex::Match ($options : object[] = undef);>
 
-Creates a new L<Regex::Match> object.
+Creates a new L<Regex::Match> object, and returns it.
 
 Options:
 
-The options are key-value pairs.
-
-Each key must be a string type. Otherwise an exception is thrown.
-
-If an unsupported option is specified, an exception is thrown.
-
 =over 2
 
-=item * C<success>
+=item * C<success> : Int
 
 Sets the C<success> field.
 
-This option must be cast to a L<Int|SPVM::Int> object. Otherwise an exception is thrown.
-
-=item * C<match_start>
+=item * C<match_start> : Int
 
 Sets the C<match_start> field.
 
-This option must be cast to a L<Int|SPVM::Int> object. Otherwise an exception is thrown.
-
-=item * C<match_length>
+=item * C<match_length> : Int
 
 Sets the C<match_length> field.
-
-This option must be cast to a L<Int|SPVM::Int> object. Otherwise an exception is thrown.
 
 =item * C<captures>
 
@@ -114,129 +102,143 @@ Examples:
 
 =head2 captures_length
 
-  method captures_length : int ();
+C<method captures_length : int ();>
 
 Gets the length of the L</"captures"> field.
 
-=head2 cap1
+=head2 cap1=head2 cap
 
-  method cap1 : string ();
+C<method cap : string ($index : int);>
 
-The same as the L</"captures"> method with 1 as the argument $index.
+Returns $match->captures[$index - 1].
+
+C<method cap1 : string ();>
+
+Returns $match->cap(1);>
 
 =head2 cap2
 
-  method cap2 : string ();
+C<method cap2 : string ();>
 
-The same as the L</"captures"> method with 2 as the argument $index.
+Returns $match->cap(2);>
 
 =head2 cap3
 
-  method cap3 : string ();
+C<method cap3 : string ();>
 
-The same as the L</"captures"> method with 3 as the argument $index.
+Returns $match->cap(3);>
 
 =head2 cap4
 
-  method cap4 : string ();
+C<method cap4 : string ();>
 
-The same as the L</"captures"> method with 4 as the argument $index.
+Returns $match->cap(4);>
 
 =head2 cap5
 
-  method cap5 : string ();
+C<method cap5 : string ();>
 
-The same as the L</"captures"> method with 5 as the argument $index.
+Returns $match->cap(5);>
 
 =head2 cap6
 
-  method cap6 : string ();
+C<method cap6 : string ();>
 
-The same as the L</"captures"> method with 6 as the argument $index.
+Returns $match->cap(6);>
 
 =head2 cap7
 
-  method cap7 : string ();
+C<method cap7 : string ();>
 
-The same as the L</"captures"> method with 7 as the argument $index.
+Returns $match->cap(7);>
 
 =head2 cap8
 
-  method cap8 : string ();
+C<method cap8 : string ();>
 
-The same as the L</"captures"> method with 8 as the argument $index.
+Returns $match->cap(8);>
 
 =head2 cap9
 
-  method cap9 : string ();
+C<method cap9 : string ();>
 
-The same as the L</"captures"> method with 9 as the argument $index.
+Returns $match->cap(9);>
 
 =head2 cap10
 
-  method cap10 : string ();
+C<method cap10 : string ();>
 
-The same as the L</"captures"> method with 10 as the argument $index.
+Returns $match->cap(10);>
 
 =head2 cap11
 
-  method cap11 : string ();
+C<method cap11 : string ();>
 
-The same as the L</"captures"> method with 11 as the argument $index.
+Returns $match->cap(11);>
 
 =head2 cap12
 
-  method cap12 : string ();
+C<method cap12 : string ();>
 
-The same as the L</"captures"> method with 12 as the argument $index.
+Returns $match->cap(12);>
 
 =head2 cap13
 
-  method cap13 : string ();
+C<method cap13 : string ();>
 
-The same as the L</"captures"> method with 13 as the argument $index.
+Returns $match->cap(13);>
 
 =head2 cap14
 
-  method cap14 : string ();
+C<method cap14 : string ();>
 
-The same as the L</"captures"> method with 14 as the argument $index.
+Returns $match->cap(14);>
 
 =head2 cap15
 
-  method cap15 : string ();
+C<method cap15 : string ();>
 
-The same as the L</"captures"> method with 15 as the argument $index.
+Returns $match->cap(15);>
 
 =head2 cap16
 
-  method cap16 : string ();
+C<method cap16 : string ();>
 
-The same as the L</"captures"> method with 16 as the argument $index.
+Returns $match->cap(16);>
 
 =head2 cap17
 
-  method cap17 : string ();
+C<method cap17 : string ();>
 
-The same as the L</"captures"> method with 17 as the argument $index.
+Returns $match->cap(17);>
 
 =head2 cap18
 
-  method cap18 : string ();
+C<method cap18 : string ();>
 
-The same as the L</"captures"> method with 18 as the argument $index.
+Returns $match->cap(18);>
 
 =head2 cap19
 
-  method cap19 : string ();
+C<method cap19 : string ();>
 
-The same as the L</"captures"> method with 19 as the argument $index.
+Returns $match->cap(19);>
 
 =head2 cap20
 
-  method cap20 : string ();
+C<method cap20 : string ();>
 
-The same as the L</"captures"> method with 20 as the argument $index.
+Returns $match->cap(20);>
+
+=head1 See Also
+
+=over 2
+
+=item * L<Regex|SPVM::Regex>
+
+=item * L<Re|SPVM::Re>
+
+=back
 
 =head1 Copyright & License
 
