@@ -5,6 +5,8 @@
     * Remove "object of" from arguments.
   [Incompatible Changes]
     * Rename Match#captures method to cap method, and Match#captures returns an array that has captured elements.
+    * Regex::Replacer anon method require $match always.
+    
   [Bug Fix]
     * Fix the bug that Match#captures_length returns wrong value.
     
